[package]
name = "bluenoisers"
version = "1.1.1"
authors = ["Constantin Berhard <git.mail.enormator@xoxy.net>"]
description = "Implementation of blue noise in Rust using Fast Poisson Disk Sampling."
documentation = "https://connyonny.github.io/bluenoisers/bluenoisers"
repository = "https://github.com/ConnyOnny/bluenoisers"
homepage = "https://github.com/ConnyOnny/bluenoisers"
readme = "README.md"
keywords = ["blue", "noise", "poisson", "sampling"]
license = "Apache-2.0"

[dependencies]
rand = "0.3"

